# TerrariaClone

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  hello.cc  instructions.txt  run.sh
diagrams/: Game.puml
diagrams/class_diagrams/: input.puml
include/: Game.h  GameActor.h  GameCommands.h  InputHandler.h  InputManager.h
include/designpatterns/: command.h
src/: Game.cc  InputHandler.cc  InputManager.cc  main.cc
tests/: CMakeLists.txt  GameActorTest.cc  GameCommandsTest.cc  InputHandlerTest.cc  InputTest.cc
